# opensim-zmp

./: CHANGELOG.md  CHANGELOG_ZMP.md  CMakeLists.txt  README.md
OpenSim/: CMakeLists.txt
OpenSim/Examples/: CMakeLists.txt
OpenSim/Examples/ZeroMomentPointEstimator/: CMakeLists.txt  README.MD  exampleZeroMomentPointEstimator.cpp  subject01_run3.osim
OpenSim/Examples/ZeroMomentPointGroundReactions/: CMakeLists.txt  exampleZeroMomentPoint1_createAndConnectComponents.cpp  exampleZeroMomentPoint2_groundReactions.cpp  exampleZeroMomentPointGroundReactions.cpp  subject01.osim  subject01_run3_cycle1_mocoSolution.sto  subject01_run3_cycle2_mocoSolution.sto  subject01_run3_cycle3_mocoSolution.sto  testZMP_outputs.sto
OpenSim/Examples/ZeroMomentPointGroundReactions/exampleZmpComponentDemo/: CMakeLists.txt  (+1 more)
OpenSim/Examples/Zmp/: CMakeLists.txt
OpenSim/Sandbox/: CMakeLists.txt
OpenSim/Sandbox/Zmp/: CMakeLists.txt  ContactPointConstraint.cpp  ContactPointConstraint.h  ZmpForce.cpp  ZmpForce.h
OpenSim/Simulation/: RegisterTypes_osimSimulation.cpp  ZeroMomentPointUtilities.cpp  ZeroMomentPointUtilities.h  osimSimulation.h
OpenSim/Simulation/Model/: Bhargava2004MuscleMetabolicsProbe.cpp  ContactPoint.cpp  ContactPoint.h  ContactPointSet.cpp  ContactPointSet.h  ContactSide.cpp  ContactSide.h  Model.cpp  ZeroMomentPointContactBody.cpp  ZeroMomentPointContactBody.h  ZeroMomentPointContactBodySet.h  ZeroMomentPointContactForce.cpp  ZeroMomentPointContactForce.h  ZeroMomentPointContactPoint.cpp  ZeroMomentPointContactPoint.h  ZeroMomentPointContactPointSet.h  ZeroMomentPointEstimator.cpp  ZeroMomentPointEstimator.h  ZeroMomentPointGroundReactions.cpp  ZeroMomentPointGroundReactions.h  ZmpGroundReactions.cpp  ZmpGroundReactions.h
OpenSim/Simulation/SimbodyEngine/: ZeroMomentPointContactPointConstraint.cpp  ZeroMomentPointContactPointConstraint.h
(+36 files in other folders)
